apps/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-service
  namespace: home
spec:
  selector:
    app: n8n
  ports:
    - name: https
      port: 443
      targetPort: 5678
      protocol: TCP
  type: ClusterIP
