apps/n8n/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
    name: n8n-gateway
spec:
    gatewayClassName: n8n
    listeners:
        - name: http
          port: 80
          protocol: HTTP
