apps/n8n/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: n8n
spec:
    parentRefs:
        - name: n8n-gateway
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: n8n-service
                port: 5678
