apps/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
spec:
  defaultBackend:
    service:
      name: n8n-service
      port:
        name: https
  ingressClassName: tailscale
